test/errhandling/ferguson/err-return.2.good
(y = (x = 1))
deinit 1
Error: test error
  err-return.chpl:23: thrown here
